modify main method, add time calculator

--- a/dissertation/CMakeLists.txt
+++ b/dissertation/CMakeLists.txt
@@ -3,4 +3,4 @@ project(dissertation)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(dissertation main.cpp quicksortShortSingle.cpp quicksortShortSingle.h)
+add_executable(dissertation main.cpp quicksortST.cpp quicksortST.h quicksortMT.cpp quicksortMT.h RadixSortST.cpp RadixSortST.h RadixSortMT.cpp RadixSortMT.h)
